# minor_proj

./: .gitignore  config.py  model.ipynb  pipelines.ipynb  pyproject.toml
data/: gnss_clean_samples.csv  gnss_dataset_labeled.csv  gnss_metrics_summary.csv  gnss_spoofed_samples.csv
zip_file/RXM-RAWX/: 2023-09-21 00-00-00.json  2023-09-21 00-00-01.json  2023-09-21 00-00-02.json  2023-09-21 00-00-03.json  2023-09-21 00-00-04.json  2023-09-21 00-00-05.json  2023-09-21 00-00-06.json  2023-09-21 00-00-07.json  2023-09-21 00-00-08.json  2023-09-21 00-00-09.json  2023-09-21 00-00-10.json  2023-09-21 00-00-11.json  2023-09-21 00-00-12.json  2023-09-21 00-00-13.json  2023-09-21 00-00-14.json  2023-09-21 00-00-15.json  2023-09-21 00-00-16.json  2023-09-21 00-00-17.json  2023-09-21 00-00-18.json  2023-09-21 00-00-19.json  2023-09-21 00-00-20.json  2023-09-21 00-00-21.json  2023-09-21 00-00-22.json  2023-09-21 00-00-23.json  2023-09-21 00-00-24.json  2023-09-21 00-00-25.json  2023-09-21 00-00-26.json  2023-09-21 00-00-27.json  2023-09-21 00-00-28.json  2023-09-21 00-00-29.json  2023-09-21 00-00-30.json  2023-09-21 00-00-31.json  2023-09-21 00-00-32.json  2023-09-21 00-00-33.json  2023-09-21 00-00-34.json  2023-09-21 00-00-35.json  2023-09-21 00-00-36.json  2023-09-21 00-00-37.json  2023-09-21 00-00-38.json  2023-09-21 00-00-39.json  (+3560 more)
